# machine-data-model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev_requirements.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: copilot-instructions.md  tracing-todos.md
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
docs/source/_templates/autoapi/: macros.rst
docs/source/_templates/autoapi/python/: module.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/machine_data_model/: index.rst
docs/source/autoapi/machine_data_model/builders/: index.rst
docs/source/autoapi/machine_data_model/builders/data_model_builder/: index.rst
docs/source/autoapi/machine_data_model/builders/message_builder/: index.rst
docs/source/autoapi/machine_data_model/data_model/: index.rst
docs/source/autoapi/machine_data_model/nodes/: index.rst
docs/source/autoapi/machine_data_model/nodes/data_model_node/: index.rst
docs/source/autoapi/machine_data_model/nodes/folder_node/: index.rst
docs/source/autoapi/machine_data_model/nodes/measurement_unit/: index.rst
docs/source/autoapi/machine_data_model/nodes/measurement_unit/measure_builder/: index.rst
docs/source/autoapi/machine_data_model/nodes/method_node/: index.rst
docs/source/autoapi/machine_data_model/nodes/variable_node/: index.rst
docs/source/autoapi/machine_data_model/operations/: index.rst
docs/source/autoapi/machine_data_model/operations/method_operation/: index.rst
docs/source/autoapi/machine_data_model/operations/operation/: index.rst
docs/source/autoapi/machine_data_model/operations/read_operation/: index.rst
docs/source/autoapi/machine_data_model/operations/write_operation/: index.rst
docs/source/autoapi/machine_data_model/protocols/: index.rst
docs/source/autoapi/machine_data_model/protocols/glacier_v1/: index.rst
docs/source/autoapi/machine_data_model/protocols/glacier_v1/enumeration_for_messages/: index.rst
docs/source/autoapi/machine_data_model/protocols/glacier_v1/message/: index.rst
docs/source/autoapi/machine_data_model/protocols/glacier_v1/method_message/: index.rst
docs/source/autoapi/machine_data_model/protocols/glacier_v1/variable_message/: index.rst
docs/source/autoapi/machine_data_model/protocols/message_data_model_manipulator/: index.rst
examples/: serialize.py  tracing_example.py  visitor_pattern_demo.py  wait_condition_example.py
examples/ice/: Cell4-opcua.yml  Cell5-opcua.yml  connect.py  conveyor-opcua.yml  test.py
examples/opcua/: README.md  connect.py  opcua.yml  test.py
examples/subscription/: README.md  basic_subscription.py  data_change_notification.py  hierarchical_notifications.py  multiple_subscribers.py  range_notification.py  unsubscribe_example.py
examples/tracing/: __init__.py  basic_tracing.py  control_flow_tracing.py  message_tracing.py  method_tracing.py  mixed_execution_tracing.py  multi_data_model_tracing.py  subscription_tracing.py  support.py  wait_condition_tracing.py
machine-data-model/: __main__.py
machine_data_model/: __init__.py  __main__.py  data_model.py
machine_data_model/behavior/: __init__.py  call_method_node.py  control_flow.py  control_flow_node.py  control_flow_scope.py  execution_context.py  local_execution_node.py  read_variable_node.py  remote_execution_node.py  visitor.py  wait_condition_node.py  write_variable_node.py
machine_data_model/builder/: __init__.py  data_model_builder.py  data_model_dumper.py
machine_data_model/builders/: data_model_builder.py  message_builder.py
machine_data_model/nodes/: __init__.py  data_model_node.py  folder_node.py  method_node.py  variable_node.py
machine_data_model/nodes/composite_method/: __init__.py  call_method_node.py  composite_method_node.py  control_flow.py  control_flow_node.py  control_flow_scope.py  read_variable_node.py  wait_condition_node.py  write_variable_node.py
machine_data_model/nodes/connectors/: abstract_async_connector.py  abstract_connector.py  connector_thread.py  opcua_connector.py  remote_resource_spec.py
machine_data_model/nodes/measurement_unit/: __init__.py  measure_builder.py
machine_data_model/nodes/subscription/: __init__.py  variable_subscription.py
machine_data_model/protocols/: __init__.py  message.py  message_data_model_manipulator.py  message_handler.py  protocol_mng.py
machine_data_model/protocols/frost_v1/: __init__.py  frost_header.py  frost_message.py  frost_message_builder.py  frost_payload.py  frost_protocol_mng.py
machine_data_model/protocols/glacier_v1/: Message.py  enumeration_for_messages.py  glacier_header.py  glacier_message.py  glacier_mng.py  glacier_payload.py  glacier_protocol_mng.py  message.py  message_factory.py  message_handler.py  method_message.py  variable_message.py
machine_data_model/tracing/: __init__.py  core.py  events.py  tracing_core.py
scripts/: apply_cstyle.sh  check_typing.sh  gen_doc.sh  gen_requirements.sh  radon.sh  run_tox.sh
template/: data_model.yml  message_method.json  message_template.md  message_variable.json  simple_model.yaml  variable_obj.yml
tests/: __init__.py  test_data_model.py
tests/behavior/: test_bidirectional_linking.py  test_control_flow.py  test_control_flow_node.py  test_local_execution_node.py  test_remote_execution_node.py  test_remove_execution_node.py  test_wait_subscription_bug.py
tests/builder/: test_data_model_dumper.py  test_dump.py
tests/nodes/: test_method_node.py  test_variable_node.py
tests/nodes/composite_method/: __init__.py  test_composite_method.py  test_control_flow.py  test_control_flow_node.py
tests/nodes/connectors/: conftest.py  test_opcua_client.py  test_opcua_connector.py  test_opcua_data_model.py
tests/nodes/measurement_unit/: test_folder_node.py  test_measure_builder.py  test_method_node.py  test_variable_node.py
tests/nodes/subscription/: __init__.py  test_subscription.py
tests/protocols/glacier_v1/: test_frost_message_builder.py  test_frost_protocol_mng.py  test_message_builder.py  test_message_mng.py
tests/tracing/: __init__.py  test_tracing.py
